# physics

./: .gitignore  README.md  collisions.py  example-forManim.py  example.py  output.npz  physics.py  pyproject.toml  reade.py  requirements.txt
.github/workflows/: manim.yml  render.yml
.vim/: coc-settings.json
example/: example.py
media/videos/example-forManim/2160p60/partial_movie_files/main/: partial_movie_file_list.txt
media/videos/example-forManim/480p15/partial_movie_files/main/: partial_movie_file_list.txt
package/: physics.py
