[tool.poetry]
name = "physics"
version = "0.1.0"
description = "A simple physics simulator for three-body question."
authors = ["funny233-github", "Dragon1573"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
tqdm = "^4.64.1"
manim = "^0.17.2"


[[tool.poetry.source]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true
secondary = false


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
